Fixed slight align issue on mobile

--- a/index.css
+++ b/index.css
@@ -375,4 +375,7 @@ textarea {
     #skipper {
         display: none;
     }
+    #content {
+        margin: 120px 12%;
+    }
 }
